# energy-monitor

./: .gitignore  .gitignore.orig  MANIFEST.in  README.md  energy-monitor.py  energy-monitor.spec  energy-monitor_win.spec  environment.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
config/: config.yml
data/: cpu_tdp.json  database_intel.json
energy_monitor/: install_config.py  main.py
energy_monitor/config/: secrets.yml
energy_monitor/core/: cpuCO2.py  gui.py
energy_monitor/data/: cpu_tdp.json  tableExport.json  user_data.json
energy_monitor/utils/: api_calls.py  cli.py  cpu.py  io.py  scraping.py
src/: cpuCO2.py  main.py
src/core/: cpuCO2.py  gui.py  main.py
src/energymonitor/: __init__.py  api_calls.py  co2api.py  cpu_usage.py  exceptions.py  scraping.py  user_inputs.py
src/utils/: __init__.py  api_calls.py  cli.py  constants.py  cpu.py  cpu_usage.py  data.py  gui.py  io.py  scraping.py
tests/: test_api_calls.py  test_cpu.py  test_cpuCO2.py  test_scraping.py
